Make possible to remove the last most visited tile

The last Most Visited tile could not be removed in the NTP. This CL fixes it.

BUG=730033

Review-Url: https://codereview.chromium.org/2923803002
Cr-Commit-Position: refs/heads/master@{#477569}

Former-commit-id: b90a205103775b54fac946c7617222ba9700b544